deploy/k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE, HEAD"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /oauth/?(.*)
            backend:
              serviceName: oauth-cluster-ip
              servicePort: 8080
          - path: /identity/?(.*)
            backend:
              serviceName: identities-cluster-ip
              servicePort: 8080
          - path: /product/?(.*)
            backend:
              serviceName: products-cluster-ip
              servicePort: 8080
#          - path: /human/?(.*)
#            backend:
#              serviceName: humans-cluster-ip
#              servicePort: 8080
#          - path: /family/?(.*)
#            backend:
#              serviceName: families-cluster-ip
#              servicePort: 8080
#          - path: /?(.*)
#            backend:
#              serviceName: example-client-cluster-ip
#              servicePort: 80
#          - path: /chore/?(.*)
#            backend:
#              serviceName: chores-cluster-ip
#              servicePort: 8080
#          - path: /human
#            backend:
#              serviceName: humans-cluster-ip
#              servicePort: 8080
#          - path: /family
#            backend:
#              serviceName: families-cluster-ip
#              servicePort: 8080
#          - path: /?(.*)
#            backend:
#              serviceName: example-client-cluster-ip
#              servicePort: 80
#          - path: /chore
#            backend:
#              serviceName: chores-cluster-ip
#              servicePort: 8080
